added gallery code to server and front end
