# src/Photobox.Web/Photobox.Web/Responses/GalleryCodeResponse.cs
@@ -1,0 +1,6 @@
+﻿namespace Photobox.Web.Responses;
+
+public record GalleryCodeResponse
+{
+    public required string Code { get; init; }
+}
